# BitBlitzer

./: CMakeCache.txt  CMakeLists.txt  Game.sln  Readme.md  build.ninja  cmake_install.cmake  previousIdea.txt
Game/: CMakeLists.txt  DepthBuffer.h  Game.vcxproj  Game.vcxproj.filters  Readme.md  Tile.h  cmake_install.cmake  scratch.txt
Game/App/: AppSettings.h  SimpleController.cpp  SimpleController.h  SimpleSound.cpp  SimpleSound.h  SimpleSprite.cpp  SimpleSprite.h  app.cpp  app.h  main.cpp  main.h
Game/Assets/: BoxTest.mtl  Dirt.mtl  Grass.mtl  MAZE.mtl  MazeTriangulated.mtl  NoNormalsPinball.mtl  PacmanModel.mtl  RobotModel.mtl  SlingShot.mtl  Tree1.mtl  UnitCube.mtl  UnitCubeMetal.mtl  furina.mtl  smoothSpot.mtl  spotFlipped.mtl  spotFrontFace.mtl  spotWithTextures.mtl
Game/src/: AABB.h  AssetServer.cpp  AssetServer.h  Assets.h  BlingPhong.cpp  BlingPhong.h  BuildController.cpp  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  ClippedTriangleBuffer.h  Clipper.cpp  Clipper.h  Collider.h  ColliderCallbackSystem.cpp  ColliderCallbackSystem.h  ColliderCategory.h  Collision.cpp  Collision.h  ColorBuffer.h  ComponentArray.h  ComponentBuffer.h  ComponentManager.h  Concurrency.h  Concurrent.h  Coordinator.h  CowProjectile.h  Cows.h  Cubemap.h  CursorController.cpp  CursorController.h  DebugCamera.cpp  DebugCamera.h  DebugMesh.cpp  DebugMesh.h  DebugPhysicsRenderer.cpp  DebugPhysicsRenderer.h  DepthBuffer.h  ECSManager.h  (+125 more)
Game/stb_image/: stb_image.cpp  stb_image.h
wasm_port/: AssetServer.h  Assets.h  BlingPhong.cpp  BuildController.cpp  BuildController.h  Camera.cpp  Camera.h  CameraController.cpp  ColliderCallbackSystem.h  Collision.cpp  ComponentBuffer.h  ComponentManager.h  Concurrent.h  CursorController.cpp  Cursors.h  DebugCamera.cpp  DebugMesh.cpp  DebugMesh.h  DebugPhysicsRenderer.cpp  ECSManager.h  EmscriptenProject1.sln  EmscriptenProject1.vcxproj  Entity.h  EntityManager.h  ExtendedGraphics.cpp  FragmentShader.cpp  FragmentShader.h  Game.cpp  GameManager.cpp  LaunchController.cpp  Level1.cpp  Main.cpp  Main.h  Manifolds.cpp  Mat2.cpp  Material.cpp  Material.h  MeshHandler.h  PhysicsSystem.h  ProjectileCowCollider.cpp  (+25 more)
wasm_port/Assets/: Dirt.mtl  Grass.mtl  SlingShot.mtl  UnitCube.mtl  UnitCubeMetal.mtl
